Bug 824885 - Fix -Wdeprecated-writable-strings warnings in xremote code.  r=karlt.